--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -115,8 +115,8 @@
 
  */
 :root {
-  --theme-deafult: #2A3650;
-  --theme-secondary: #495f8f;
+  --theme-deafult: #004444;
+  --theme-secondary: #306565;
   --light-background: rgba(242, 243, 247, 0.7);
   --body-font-color: #86909C;
   --chart-border: #E6E9EB;
