--- a/assets/css/dev-style.css
+++ b/assets/css/dev-style.css
@@ -10,8 +10,8 @@
 /* img select section */
 .image-upload-wrapper {
   position: relative;
-  width: 400px;
-  height: 300px;
+  width: 100%;
+  height: 250px;
   border-radius: 16px;
   background: #fff;
   box-shadow: 0 5px 25px rgb(0 0 0 / 11%);
@@ -60,8 +60,8 @@ input[type="file"] {
 /* img select section end */
 /* video select section */
 .video-upload-wrapper {
-    width: 400px;
-  height: 300px;
+  width: 100%;
+  height: 250px;
   border: 1px dashed #ccc;
   padding: 10px;
   text-align: center;
@@ -101,4 +101,9 @@ table.dataTable.stripe tbody tr.odd, table.dataTable.display tbody tr.odd {
   .video-upload-wrapper{
     width: 100%;
   }
+}
+
+.working-service-model-img img{
+  height: 150px !important;
+  width: 100% !important;
 }
